[package]
name = "unreal-shimloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "dwmapi"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.18.0"
widestring = "1.0.2"
path-clean = "1.0.1"
getargs = "0.5.0"

[dependencies.retour]
version = "0.4.0-alpha.1"
features = ["static-detour"]

[dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
forward-dll = "0.1.13"
